Initial updates
So many things! Rendering is completely different.